# nanograph

./: .env  .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  bug-report-embeddings.md  bug-report.md  commit.md  examples.gq  grammar.ebnf  package-lock.json  sw-graph.md  type-bug-report.md
.github/workflows/: ci.yml  release.yml
crates/nanograph/: Cargo.toml
crates/nanograph-cli/: Cargo.toml
crates/nanograph-cli/src/: config.rs  main.rs  metadata.rs  schema_ops.rs  tests.rs
crates/nanograph-cli/tests/: bootstrap_and_env.rs  bug_regressions.rs  config_and_aliases.rs  display_formats.rs  docs_and_output.rs  embed_command.rs  export_roundtrip.rs  graph_mirror.rs  namespace_lineage.rs  revops_admin_and_cdc.rs  revops_workflows.rs  search_features.rs  semantic_search.rs  starwars_workflows.rs
crates/nanograph-cli/tests/common/: mod.rs
crates/nanograph-ffi/: Cargo.toml
crates/nanograph-ffi/include/: nanograph_ffi.h
crates/nanograph-ffi/src/: lib.rs
crates/nanograph-ffi/swift/: Package.swift  README.md
crates/nanograph-ffi/swift/.build/: build.db  debug.yaml
crates/nanograph-ffi/swift/.build/arm64-apple-macosx/debug/: description.json
crates/nanograph-ffi/swift/.build/arm64-apple-macosx/debug/CNanoGraph.build/: module.modulemap
crates/nanograph-ffi/swift/.build/arm64-apple-macosx/debug/ModuleCache/X552KVVQ1JD4/: CFNetwork-1PNPO1ORVQZLS.pcm  CNanoGraph-2XR6ED73OZS1C.pcm  CoreFoundation-16SA8WK3L6MQN.pcm  DiskArbitration-3LBJF5I58QD8.pcm  Dispatch-R76HXUP80TVL.pcm  MachO-20RPYVQSX341K.pcm  ObjectiveC-1G8H182PQX3QE.pcm  Security-3QCVXOV25KK54.pcm  SwiftShims-2IMTS4WWRU7VJ.pcm  XPC-T0ZXCAST7PE3.pcm  _AvailabilityInternal-2YSBQADOLX02V.pcm  _Builtin_float-19KE09ZDXQ6Q3.pcm  _Builtin_inttypes-19KE09ZDXQ6Q3.pcm  _Builtin_limits-19KE09ZDXQ6Q3.pcm  _Builtin_stdarg-19KE09ZDXQ6Q3.pcm  _Builtin_stdbool-19KE09ZDXQ6Q3.pcm  _Builtin_stddef-19KE09ZDXQ6Q3.pcm  _Builtin_stdint-19KE09ZDXQ6Q3.pcm  _DarwinFoundation1-2YSBQADOLX02V.pcm  _DarwinFoundation2-3J4ZFA06I5V1P.pcm  _DarwinFoundation3-2NSGASPTSNBVQ.pcm  _SwiftConcurrencyShims-2IMTS4WWRU7VJ.pcm  launch-3T3BU4MASLMUM.pcm  libDER-26DYHF6GC6WWA.pcm  libkern-2KQ0X67RTM1JF.pcm  os_object-2MV8OP7R98AN8.pcm  os_workgroup-2MV8OP7R98AN8.pcm  ptrauth-19KE09ZDXQ6Q3.pcm  ptrcheck-19KE09ZDXQ6Q3.pcm  sys_types-3J4ZFA06I5V1P.pcm
crates/nanograph-ffi/swift/.build/arm64-apple-macosx/debug/Modules/: NanoGraph.swiftdoc  NanoGraph.swiftmodule  NanoGraph.swiftsourceinfo
crates/nanograph-ffi/swift/.build/arm64-apple-macosx/debug/NanoGraph.build/: NanoGraph.d  NanoGraph.emit-module.d  NanoGraph.swiftdeps  master.priors  output-file-map.json  sources
crates/nanograph-ffi/swift/Sources/NanoGraph/: NanoGraph.swift
crates/nanograph-ffi/swift/Tests/NanoGraphTests/: DatabaseTests.swift
crates/nanograph-ts/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  types.d.ts
crates/nanograph-ts/__test__/: index.spec.mjs
crates/nanograph-ts/scripts/: install.cjs
crates/nanograph-ts/src/: convert.rs  lib.rs
crates/nanograph/benches/: load.rs  migration.rs
crates/nanograph/benches/common/: mod.rs
crates/nanograph/src/: embedding.rs  error.rs  json_output.rs  lib.rs  types.rs
crates/nanograph/src/catalog/: mod.rs  schema_ir.rs
crates/nanograph/src/ir/: lower.rs  mod.rs
crates/nanograph/src/plan/: mod.rs  node_scan.rs  physical.rs  planner.rs
crates/nanograph/src/query/: ast.rs  parser.rs  query.pest  typecheck.rs
crates/nanograph/src/schema/: ast.rs  parser.rs  schema.pest
crates/nanograph/src/store/: blob_store.rs  database.rs  export.rs  graph.rs  graph_mirror.rs  graph_types.rs  indexing.rs  lance_io.rs  loader.rs  manifest.rs  media.rs  metadata.rs  migration.rs  mod.rs  namespace.rs  namespace_commit.rs  namespace_lineage_graph_log.rs  namespace_lineage_internal.rs  runtime.rs  snapshot.rs  storage_generation.rs  storage_migrate.rs  txlog.rs  v4_graph_log.rs  v4_internal.rs
crates/nanograph/src/store/database/: cdc.rs  maintenance.rs  persist.rs  tests.rs
crates/nanograph/src/store/loader/: constraints.rs  embeddings.rs  jsonl.rs  merge.rs
crates/nanograph/tests/: e2e.rs  engine_integration.rs  index_perf.rs  schema_migration.rs  test_lifecycle.sh  test_migration.sh  test_query_mutations.sh  write_amp_perf.rs
docs/: README.md  db-features.md  execution-checklist.md
docs/dev/: architecture.md  backlog.md  cdc-refactor-plan.md  db-features.md  embeddable-api.md  embeddings-dev.md  execution-checklist.md  export-issue.md  fts-rfc.md  release-checklist.md  release-notes-v1.2.0.md  release-notes-v1.2.1.md  sdks.md  search-plan.md  search.md  swift-sdk-review.md  swift-sdk.md  swift-split-repo.md  test-framework.md  ts-sdk.md  typescript-sdk.md  vector.md
docs/user/: best-practices.md  blobs.md  cli-reference.md  config.md  context-graph-example.md  embeddings.md  queries.md  quick-start.md  revops-case.md  revops-graph-schema.md  schema.md  search.md  skills.md  starwars-example.md
examples/revops/: README.md  revops.gq  revops.jsonl  revops.pg
examples/starwars/: README.md  starwars.gq  starwars.jsonl  starwars.pg
tests/: e2e.rs
tests/cli/: run-cli-e2e.sh
tests/cli/lib/: common.sh
tests/cli/scenarios/: context_graph_search.sh  lifecycle.sh  maintenance.sh  migration.sh  query_mutations.sh  revops_typed_cdc.sh  starwars_search.sh  text_search.sh
tests/fixtures/: README.md
tools/swift-package/: render_package.sh
(+54 files in other folders)
