[workspace]
resolver = "2"
members = [
    "crates/nanograph",
    "crates/nanograph-cli",
]

[workspace.dependencies]
arrow = { version = "57", features = ["prettyprint"] }
datafusion = "52"
futures = "0.3"
async-trait = "0.1"
pest = "2"
pest_derive = "2"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lance = "2.0"

[profile.dev]
debug = 0
