[package]
name = "nanograph-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nanograph"
path = "src/main.rs"

[dependencies]
nanograph = { path = "../nanograph" }
clap = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
arrow = { workspace = true }
datafusion = { workspace = true }
