[package]
name = "nanograph-cli"
version = "0.6.0"
edition = "2024"
description = "CLI for NanoGraph — the embedded property graph database. No server, schema-as-code."
repository = "https://github.com/aaltshuler/nanograph"
license = "MIT"

[[bin]]
name = "nanograph"
path = "src/main.rs"

[dependencies]
nanograph = { path = "../nanograph" }
clap = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
arrow = { workspace = true }
datafusion = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
color-eyre = { workspace = true }
ariadne = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
