[package]
name = "nanograph-cli"
version = "0.7.1"
edition = "2024"
description = "CLI for NanoGraph — the embedded property graph database. No server, schema-as-code."
repository = "https://github.com/aaltshuler/nanograph"
license = "MIT"
readme = "../../README.md"

[[bin]]
name = "nanograph"
path = "src/main.rs"

[dependencies]
nanograph = { path = "../nanograph", version = "0.7.1" }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-cast = { workspace = true }
datafusion-common = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
color-eyre = { workspace = true }
ariadne = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
