[package]
name = "nanograph"
version = "0.5.0"
edition = "2024"
description = "Embedded local-first typed property graph database. Arrow-native, DataFusion-backed."
repository = "https://github.com/aaltshuler/nanograph"
license = "MIT"
keywords = ["graph", "database", "arrow", "datafusion", "embedded"]
categories = ["database-implementations", "data-structures"]

[dependencies]
arrow = { workspace = true }
datafusion = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lance = { workspace = true }
lance-index = { workspace = true }
tracing = { workspace = true }
ahash = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
